--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
@@ -16,5 +15,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.4"
-  }
+  },
+  "description": ""
 }
