--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.6.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "description": ""
 }
